# dream

./: .gitignore  Cargo.toml  README.md  benchmark.cr  benchmark.yml  benchmark_config.yaml  shard.yml  spec.cr  spec.yml
benches/: benchmarks.rs  config.yml  index_config.yml
benchmarks_report/in-memory_ searching all objects by 1 tags/base/: sample.json  tukey.json
benchmarks_report/in-memory_ searching all objects by 1 tags/new/: benchmark.json  estimates.json
benchmarks_report/in-memory_ searching all objects by 1 tags/report/: index.html
benchmarks_report/in-memory_ searching all objects by 2 tags/base/: benchmark.json  sample.json  tukey.json
benchmarks_report/in-memory_ searching all objects by 2 tags/new/: estimates.json
benchmarks_report/in-memory_ searching all objects by 2 tags/report/: index.html
benchmarks_report/in-memory_ searching all objects by 3 tags/base/: estimates.json  tukey.json
benchmarks_report/in-memory_ searching all objects by 3 tags/new/: benchmark.json  sample.json
benchmarks_report/in-memory_ searching all objects by 3 tags/report/: index.html
benchmarks_report/in-memory_ searching all objects by 4 tags/new/: benchmark.json  estimates.json  sample.json  tukey.json
benchmarks_report/in-memory_ searching all objects by 4 tags/report/: index.html
benchmarks_report/on-disk_ searching all objects by 1 tags/base/: benchmark.json  tukey.json
benchmarks_report/on-disk_ searching all objects by 1 tags/new/: estimates.json  sample.json
benchmarks_report/on-disk_ searching all objects by 1 tags/report/: index.html
benchmarks_report/report/: index.html
spec/: dream_spec.cr
src/: dream.cr  lib.rs  test_index_config.yml
(+15 files in other folders)
