[package]
name = "dream"
version = "0.1.0"
edition = "2024"

[dependencies]
lawn = { git = "https://github.com/mentalblood0/lawn" }
anyhow = { version = "1.0.100", features = ["std", "backtrace"] }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
fallible-iterator = { version = "0.3", features = ["std"] }
bincode = { version = "2.0", features = ["derive"] }
serde = { optional = true, version = "1.0", features = ["derive"] }

[features]
serde = ["lawn/serde", "dep:serde"]

[dev-dependencies]
nanorand = "0.8"
criterion = { version = "0.8", features = ["html_reports"] }
pretty_assertions = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde-saphyr = { git = "https://github.com/bourumir-wyngs/serde-saphyr" }
typetag = { version = "0.2" }

[[bench]]
name = "benchmarks"
harness = false
required-features = ["serde"]
